# MCP_Server_Template

./: .cursorrules  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  fastmcp.json  mcp_config.json  pyproject.toml
examples/: client_example.py
scripts/: run_mcp_server.py
src/mcp_server_template/: __init__.py  config.py  main.py  stdio_server.py
src/mcp_server_template/middleware/: __init__.py  auth.py  logging.py  rate_limiting.py
src/mcp_server_template/resources/: __init__.py  config_resource.py  logs_resource.py  status_resource.py
src/mcp_server_template/tools/: __init__.py  calculator.py  data_processor.py  file_operations.py  web_scraper.py
tests/: conftest.py
tests/unit/: test_calculator.py  test_file_operations.py
